--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -1038,7 +1038,7 @@ body.dang-tai-lct header .top-header {
                         .hop-tin-nhan .khung-tin-nhan {
                             width: 100%;
                             padding: 10px;
-                            border-bottom: 1px solid #ddd;
+                            border-bottom: 1px solid #eee;
                             display: flex;
                             flex-direction: row;
                             background-color: #fff;
