--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -75,7 +75,8 @@
                     {
 
                         <ul class="da-dang-nhap">
-                            <li>
+                            <li class="so-luong">
+                                <div class="so-luong-tin-nhan">3</div>
                                 <a href="javascript:void(0)" data-mo-doi-tuong="hop-tin-nhan">
                                     <i class="pe-7s-chat"></i>
                                 </a>
