--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -7,6 +7,7 @@
     KetQua ketQua;
     NguoiDungDTO nguoiDung = null;
     List<TinNhanDTO> dsTinNhan = null;
+    int soLuongTinNhan = 0;
     
     if (Session["NguoiDung"] != null)
     {
@@ -20,6 +21,12 @@
         if (ketQua.trangThai == 0)
         {
             dsTinNhan = ketQua.ketQua as List<TinNhanDTO>;
+
+            ketQua = BUSLayer.TinNhanBUS.laySoLuongTinNhanChuaDocTheoMaNguoiNhan(nguoiDung.ma.Value);
+            if (ketQua.trangThai == 0)
+            {
+                soLuongTinNhan = (ketQua.ketQua as int?).Value;
+            }
         }
     }
 
@@ -76,7 +83,10 @@
 
                         <ul class="da-dang-nhap">
                             <li class="so-luong">
-                                <div class="so-luong-tin-nhan">3</div>
+                                @if (soLuongTinNhan != 0)
+                                {
+                                    <div class="so-luong-tin-nhan">soLuongTinNhan</div>
+                                }                            
                                 <a href="javascript:void(0)" data-mo-doi-tuong="hop-tin-nhan">
                                     <i class="pe-7s-chat"></i>
                                 </a>
