--- a/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
@@ -94,6 +94,44 @@
     <link rel="stylesheet" href="/ThongTin.css/KhoaHoc/" />
 }
 @section Scripts {
+    <script>
+        $(function () {
+            $('[data-chuc-nang="xoa-kh"]').on('click', function () {
+                moPopup({
+                    tieuDe: 'Xác nhận',
+                    thongBao: 'Bạn có chắc muốn xóa khóa học này?',
+                    bieuTuong: 'hoi',
+                    nut: [
+                        {
+                            ten: 'Có',
+                            loai: 'nguy-hiem',
+                            xuLy: function () {
+                                var $tai = moBieuTuongTai();
+                                $.ajax({
+                                    url: '/KhoaHoc/XuLyXoa/@Model.ma.Value',
+                                    method: 'POST',
+                                    dataType: 'JSON'
+                                }).always(function () {
+                                    $tai.tat();
+                                }).done(function (data) {
+                                    if (data.trangThai == 0) {
+                                        location = '/KhoaHoc/DanhSach'
+                                    }
+                                    else {
+                                        moPopupThongBao(data);
+                                    }
+                                }).fail(function () {
+                                    moPopupThongBao('Xóa khóa học thất bại');
+                                });
+                            }
+                        }, {
+                            ten: 'Không'
+                        }
+                    ]
+                })
+            });
+        });
+    </script>
 }
 
 
