--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -290,7 +290,7 @@
                                                 </div>
                                                 <div class="thong-tin">
                                                     @NguoiDungView.hinhDaiDien(cauHoi.nguoiTao)
-                                                    <span>@cauHoi.nguoiTao.ho @cauHoi.nguoiTao.tenLot @cauHoi.nguoiTao.ten</span>                                                        
+                                                    @NguoiDungView.link(cauHoi.nguoiTao)                                                       
                                                 </div>
                                             </li>
                                         }
