--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -138,7 +138,7 @@ body.tai > .khung {
     position: absolute;
     padding-left: 5px;
     text-align: left;
-    z-index: 9;
+    z-index: 20;
 }
 
 .bieu-tuong-tai-lct_page {
@@ -656,6 +656,7 @@ body.khong-scroll > .khung {
 
         .popup-full-container > .popup-full .khung-popup-tap-tin .noi-dung {
             padding: 10px;
+            min-height: 100px;
         }
 
         .popup-full-container > .popup-full .khung-popup-tap-tin .chuc-nang {
