--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -85,7 +85,7 @@
                             <li class="so-luong">
                                 @if (soLuongTinNhan != 0)
                                 {
-                                    <div class="so-luong-tin-nhan">soLuongTinNhan</div>
+                                    <div class="so-luong-tin-nhan">@soLuongTinNhan</div>
                                 }                            
                                 <a href="javascript:void(0)" data-mo-doi-tuong="hop-tin-nhan">
                                     <i class="pe-7s-chat"></i>
